<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_gravity="center"
  android:layout_margin="8dp"
  android:gravity="center"
  android:orientation="horizontal"
  tools:context=".views.MainActivity">

  <View
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1" />

  <LinearLayout
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="3"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
      android:id="@+id/et_username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:hint="@string/label_username"
      android:imeOptions="actionNext"
      android:inputType="text"
      android:nextFocusForward="@id/et_repository" />

    <EditText
      android:id="@+id/et_repository"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:hint="@string/label_repository"
      android:imeOptions="actionDone"
      android:inputType="text" />

    <Button
      android:id="@+id/search_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/label_button_search_stargazers"
      android:theme="@style/FlatButton" />
  </LinearLayout>

  <View
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1" />
</LinearLayout>